# Youtube-Downloader

./: .gitignore  README.md  main  main.pyw  makezip.py  mypy.ini  pyproject.toml  requirements.txt
assets/: theme.json
youtube_downloader/: __init__.py  main.py
youtube_downloader/components/: __init__.py  control_section.py  message_box.py  preview_section.py  progress_section.py
youtube_downloader/core/: constants.py  events.py  state.py
youtube_downloader/models/: format.py  video_data.py
youtube_downloader/workers/: preview_worker.py  video_data.py
